* action=usercontribs: additional filtering by ucshow=; selection of needed fields with ucprop=;
  the textid (rev_text_id) is no longer being exposed
* breaking change: backlinks, embeddedin & imageusage now return lists in json instead of a map,
                   and do not return anything when titles do not exist. (bug 9970)

== Maintenance script changes since 1.10 ==

* Add support for wgMaxTocLevel option in parserTests
* (bug 6823) dumpHTML: explicitly disable article view counter

== Languages updated since 1.10 ==

* Arabic (ar)
* Catalan (ca)
* German (de)
* Spanish (es)
* Farsi (fa)
* Finnish (fi)
* French (fr)
* Hebrew (he)
* Indonesian (id)
* Italian (it)
* Japanese (ja)
* Kabyle (kab)
* Kazakh (kk)
* Kurdish (ku)
* Lithuanian (lt)
* Norwegian (no)
* Polish (pl)
* Russian (ru)
* Somali (so)
* Sundanese (su)
* Swedish (sv)
* Chinese (PRC) (zh-cn)
* Chinese (Taiwan) (zh-tw)
* Cantonese (zh-yue)

== Compatibility ==

MediaWiki 1.11 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.11 has several database changes since 1.10, and will not work without schema
updates.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could
break. Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed upgrade instructions.

=== Caveats ===

Some output, particularly involving user-supplied inline HTML, may not